--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,64 @@
 <div class="container-fluid">
+  <mat-card fxLayout="row" fxLayout.xs="column" fxFlexFill>
+    <div fxFlex="30" fxFlex.xs="55">
+      <mat-accordion>
+        <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>search</mat-icon>
+              Nombre del hotel
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
-  <mat-card fxLayout="row" 
-  fxLayout.xs="column" 
-  fxFlexFill>
-  <div fxFlex="30"  fxFlex.xs="55"  >
-    <mat-accordion >
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <mat-icon >search</mat-icon>                  
-            Nombre del hotel
-          </mat-panel-title>                  
-
-        </mat-expansion-panel-header>
-
-        <mat-form-field>
-          <input matInput placeholder="Ingrese el nombre del hotel">
-        </mat-form-field>
-
-      </mat-expansion-panel>
-      <mat-expansion-panel> 
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <mat-icon>star</mat-icon>
-          Estrellas
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <p>I'm visible because I am open</p>
-    </mat-expansion-panel>
-  </mat-accordion>
-
-</div>       
-<app-hotel-list fxFlex="70"  fxFlex.xs="15"></app-hotel-list>
-</mat-card>
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Ingrese el nombre del hotel"
+              #name="ngModel"
+              [(ngModel)]="queryaux.name"
+              name="name"
+            />
+          </mat-form-field>
+          <mat-action-row>
+            <button mat-button color="primary" (click)="nextStep()">Siguiente</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+        <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>star</mat-icon>
+              Estrellas
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div fxLayout="column">
+            <mat-radio-button
+              color="primary"
+              [checked]="queryaux.filter === 6"
+              (change)="queryaux.filter = $event.checked ? 1 : ''"
+              >Todas las estrellas
+            </mat-radio-button>
+            <mat-radio-button
+              color="primary"
+              *ngFor="let i of arrayOne(5); let y = index"
+              [checked]="queryaux.filter === i"
+              (change)="queryaux.filter = $event.checked ? 5 : i"
+            >
+              <div class="tbl-op" role="toolbar">
+                <ul class="fa-ul">
+                  <li *ngFor="let star of arrayRow(i); let x = index" class="fa-li">
+                    <img class="svgiterate" src="../assets/icons/filters/star.svg" />
+                  </li>
+                </ul>
+              </div>
+            </mat-radio-button>
+          </div>
+          <mat-action-row>
+            <button mat-button color="warn" (click)="prevStep()">Atras</button>
+            <button mat-raised-button color="primary" (click)="onFilter()">Buscar</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+    <app-hotel-list [qs]="query" fxFlex="70" fxFlex.xs="15"></app-hotel-list>
+  </mat-card>
 </div>
