--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <mat-card fxLayout="row" fxLayout.xs="column" fxFlexFill>
+  <mat-card fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px" fxFlexFill>
     <div fxFlex="30" fxFlex.xs="55">
       <mat-accordion>
         <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)">
